First complete version of e-ticket project

--- a/.env.sample
+++ b/.env.sample
@@ -1,12 +1,13 @@
 PORT=
 MONGO_URI=
 SUPERADMIN_USERNAME=
-<<<<<<< HEAD
 SUPERADMIN_PASSWORD=
 ACCESS_TOKEN_KEY=
 ACCESS_TOKEN_TIME=
 REFRESH_TOKEN_KEY=
 REFRESH_TOKEN_TIME=
-=======
 SUPERADMIN_PASSWORD=
->>>>>>> 2e502ffb688c0430f18739a512618e5eaa91dcc0
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USER=
+MAIL_PASS=
