--- a/package.json
+++ b/package.json
@@ -13,18 +13,15 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
-<<<<<<< HEAD
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-=======
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "joi": "^17.13.3",
->>>>>>> 2e502ffb688c0430f18739a512618e5eaa91dcc0
     "mongoose": "^8.15.1",
-    "nodemon": "^3.1.10"
+    "node-cache": "^5.1.2",
+    "nodemailer": "^7.0.3",
+    "nodemon": "^3.1.10",
+    "otp-generator": "^4.0.1"
   }
 }
